# basicvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  instructions.c  instructions.h  interrupts.c  interrupts.h  main.c  spec.txt  vm.c  vm.h
tools/: compile.c  test.basm
